syntax = "proto3";

option go_package="app/src/service/pb";
option java_package="jp.panta.rpcchat.pb";
option java_outer_classname="PostProtos";

import "proto/user.proto";

message Post {
    int64 id = 1;
    string text = 2;
    int64 userId = 3;
    User user = 4;
}

message CreatePost {
    string token = 1;
    string text = 2;
}

message RequestPosts {
    string token = 1;
    int64 untilId = 2;
}

message Posts {
    repeated Post posts = 1;
}

service PostService {
    rpc Create(CreatePost) returns (Post) {}
    rpc FindAll(RequestPosts) returns (Posts) {}
}
