syntax = "proto3";

option go_package = "app/src/service/pb"; 

message User {
	int64 id = 1;
	string name = 2;
	string avatarUrl = 3;
}

message RegisterUserRequest {
	string name = 1;
	string email = 2;
	string password = 3;
}

message FindUser {
	int64 id = 1;
}

message TokenResponse {
	string token = 1;
}
service UserService {
	rpc Register(RegisterUserRequest) returns (TokenResponse) {}
	rpc Login(RegisterUserRequest) returns (TokenResponse) {}
	rpc Find(FindUser) returns (User) {}
}